# ChangeLog for app-benchmarks/stress
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/stress/ChangeLog,v 1.49 2014/08/05 07:59:56 patrick Exp $

  05 Aug 2014; Patrick Lauer <patrick@gentoo.org> stress-0.18.6.ebuild,
  stress-1.0.0.ebuild, stress-1.0.1.ebuild, stress-1.0.3.ebuild,
  stress-1.0.4.ebuild:
  Make description more repoman-happy

  03 Jun 2013; Tim Harder <radhermit@gentoo.org> stress-1.0.4.ebuild:
  Update to EAPI 4 and remove old, unnecessary workarounds.

  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> stress-1.0.4.ebuild:
  x86 stable wrt bug #393701

  16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> stress-1.0.4.ebuild:
  Stable for AMD64, wrt bug #393701

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> stress-0.18.6.ebuild:
  Drop to ~mips

*stress-1.0.4 (11 Nov 2010)

  11 Nov 2010; Patrick Lauer <patrick@gentoo.org> +stress-1.0.4.ebuild:
  Bump

*stress-1.0.3 (26 Feb 2010)

  26 Feb 2010; Patrick Lauer <patrick@gentoo.org> +stress-1.0.3.ebuild:
  Bump

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> stress-1.0.1.ebuild:
  Marked ppc stable for bug #296473.

  31 Dec 2009; Brent Baude <ranger@gentoo.org> stress-1.0.1.ebuild:
  Marking stress-1.0.1 ppc64 for bug 296473

  28 Dec 2009; Markus Meier <maekke@gentoo.org> stress-1.0.1.ebuild:
  amd64/arm/x86 stable, bug #296473

  28 Dec 2009; Tiago Cunha <tcunha@gentoo.org> stress-1.0.1.ebuild:
  stable sparc, bug 296473

*stress-1.0.1 (08 Nov 2009)

  08 Nov 2009; Patrick Lauer <patrick@gentoo.org> +stress-1.0.1.ebuild:
  Bump

  13 Sep 2009; Patrick Lauer <patrick@gentoo.org> stress-0.18.6.ebuild:
  Removing virtual/libc deps

  07 Sep 2009; Raúl Porcel <armin76@gentoo.org> stress-1.0.0.ebuild:
  Add ~arm wrt #282197

  17 May 2009; Tiago Cunha <tcunha@gentoo.org> stress-1.0.0.ebuild:
  - Use the patch from bug 261720 which:
    - Avoids using -Werror during build (fixes bug 260868 reported by flameeyes).